[gd_scene load_steps=19 format=3 uid="uid://ngj3qa1yihrq"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_7n2kp"]
[ext_resource type="Resource" uid="uid://bfbrjpvgikey5" path="res://data/DeafultMovementData.tres" id="2_tf3sn"]
[ext_resource type="Texture2D" uid="uid://btyt7tei7omda" path="res://assets/JeffreySprite.png" id="3_v30qj"]
[ext_resource type="PackedScene" uid="uid://cdoim1kpn0tlp" path="res://scenes/Framer.tscn" id="4_1icg4"]
[ext_resource type="PackedScene" uid="uid://cf4digijrb32k" path="res://scenes/Liner.tscn" id="5_fplat"]

[sub_resource type="AtlasTexture" id="AtlasTexture_eyipa"]
atlas = ExtResource("3_v30qj")
region = Rect2(105, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ffr0"]
atlas = ExtResource("3_v30qj")
region = Rect2(0, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_uk8ua"]
atlas = ExtResource("3_v30qj")
region = Rect2(63, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_56opl"]
atlas = ExtResource("3_v30qj")
region = Rect2(21, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_6o5id"]
atlas = ExtResource("3_v30qj")
region = Rect2(0, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_pe4rg"]
atlas = ExtResource("3_v30qj")
region = Rect2(42, 0, 21, 21)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncig8"]
atlas = ExtResource("3_v30qj")
region = Rect2(84, 0, 21, 21)

[sub_resource type="SpriteFrames" id="SpriteFrames_uicba"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eyipa")
}],
"loop": true,
"name": &"crouch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ffr0")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uk8ua")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_56opl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6o5id")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pe4rg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncig8")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_71l0s"]
size = Vector2(10, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1in1s"]
size = Vector2(10, 10)

[sub_resource type="CircleShape2D" id="CircleShape2D_w03xi"]
radius = 8.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ck58h"]
size = Vector2(8, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_1p1sq"]
atlas = ExtResource("3_v30qj")
region = Rect2(105, 0, 21, 21)

[node name="Player" type="CharacterBody2D"]
z_index = 2
collision_layer = 2
floor_constant_speed = true
floor_max_angle = 1.309
floor_snap_length = 3.0
safe_margin = 0.1
script = ExtResource("1_7n2kp")
movement_data = ExtResource("2_tf3sn")

[node name="SpriteHolder" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="SpriteHolder"]
position_smoothing_enabled = true
position_smoothing_speed = 7.0
rotation_smoothing_enabled = true
rotation_smoothing_speed = 7.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="SpriteHolder"]
z_index = 1
position = Vector2(0, -3)
scale = Vector2(0.762, 0.762)
sprite_frames = SubResource("SpriteFrames_uicba")
animation = &"idle"

[node name="CollisionRect" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_71l0s")

[node name="CollisionCube" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1in1s")

[node name="CollisionSphere" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2(0.624, 0.624)
shape = SubResource("CircleShape2D_w03xi")
disabled = true

[node name="CoyoteJumpTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="HazardDetector" type="Area2D" parent="."]
position = Vector2(0.0010004, 5.002)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HazardDetector"]
visible = false
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_ck58h")

[node name="GravityDetector" type="Area2D" parent="."]
position = Vector2(0.0010004, 5.002)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D2" type="CollisionShape2D" parent="GravityDetector"]
position = Vector2(0, -5)
scale = Vector2(0.624, 0.624)
shape = SubResource("CircleShape2D_w03xi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="GravityDetector"]
position = Vector2(-0.0010004, -5.002)
shape = SubResource("RectangleShape2D_1in1s")

[node name="Framer" parent="." instance=ExtResource("4_1icg4")]
process_mode = 3

[node name="DashChargeTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="MiniPlayers" type="CPUParticles2D" parent="."]
visible = false
show_behind_parent = true
z_index = 1
amount = 20
lifetime = 2.0
speed_scale = 5.0
texture = SubResource("AtlasTexture_1p1sq")
direction = Vector2(0, 0)
spread = 0.0
gravity = Vector2(0, 0)
scale_amount_min = 0.3
scale_amount_max = 0.3

[node name="Liner" parent="." instance=ExtResource("5_fplat")]
z_index = -1
z_as_relative = false
position = Vector2(0, -1)
color = Color(0.913725, 0.32549, 0.341176, 1)
length = 500

[connection signal="area_entered" from="HazardDetector" to="." method="_on_hazard_detector_area_entered"]
